# finance-analytics

./: .gitignore  .venv_management.md  DEPLOYMENT.md  INTEGRATION_SUMMARY.md  README.md  UV_SETUP_SUMMARY.md  pyproject.toml  render.yaml  requirements.txt
config/: settings.py
data/outputs/portfolio_analysis/: portfolio_optimization_results.json
docs/: portfolio_optimizer.md
scripts/: portfolio_optimizer_demo.py  sample_market_data.py  test_api.py
src/: __init__.py
src/analysis/portfolio/: __init__.py  black_litterman.py  data_manager.py  optimizer.py
web_app/: README.md  app.py  app_new.py  app_production.py  requirements.txt  routes.py
web_app/static/css/: style.css
web_app/static/js/: app.js
web_app/templates/: index.html
